--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Oswald:wght@700&family=Roboto:wght@400;500;700&display=swap&subset=cyrillic-ext" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="shortcut icon" href="assets/img/logos/logo16.png" type="img/png">
+    <title>Zooov</title>
 </head>
 <body>
+    <div class="wrapper">
+        <header class="header">
+            <div class="header__logo">
+                <img src="assets/img/logos/logo80.png" alt="Zooov company logo">
+            </div>
+            <nav class="header__menu">
+                <ul class="header__list">
+                    <li><a href="" class="header__link">BARF</a></li>
+                    <li><a href="" class="header__link">Рационы</a></li>
+                    <li><a href="" class="header__link">ZOOOV</a></li>
+                    <li><a href="" class="header__link">О нас</a></li>
+                    <li><a href="" class="header__link">Доставка</a></li>
+                    <li><a href="" class="header__link">FAQ</a></li>
+                    <li><a href="" class="header__link">Контакты</a></li>
+                </ul>
+            </nav>
+            <div class="header__burger">
+                <span></span>
+            </div>
+        </header>
+        <main class="main">
+            <div class="intro"><p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, id alias. Maxime necessitatibus possimus facilis, exercitationem, delectus dolores odio doloribus harum magni blanditiis, tempora ut deserunt animi. In, tempora officiis.</div>
+            <div class="barf">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus eveniet rerum itaque quos, fugit quaerat nihil optio animi dignissimos officia quidem temporibus esse a, voluptas dolorem veniam reprehenderit at molestiae!</div>
+            <div class="diet-compo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis unde quaerat magnam dolore quos illo earum ipsum officia repellat cupiditate iste perferendis expedita veniam illum consequuntur voluptates, corporis vitae quis.</div>
+            <div class="diets">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, consectetur cum. Ullam enim incidunt tenetur voluptas nulla repudiandae, quas at velit ipsa hic labore vero impedit. Illum reiciendis modi necessitatibus?</div>
+            <div class="diet-calc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem odio atque explicabo quae id expedita qui, repudiandae quos iure nemo aliquam minus facilis inventore reiciendis fugiat, iusto quis soluta iste.</div>
+            <div class="why-zooov">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, mollitia! Suscipit tenetur temporibus facilis mollitia, soluta nam deleniti laborum nostrum deserunt sapiente dolores hic qui odio repellendus perspiciatis dignissimos nulla.</div>
+            <div class="about-zooov">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, officia natus. Et, nisi vitae minus error culpa voluptate sapiente harum quasi numquam quos eligendi esse enim rem ducimus doloribus voluptatem.</div>
+            <div class="delivery">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi esse, non sapiente doloremque aliquid odit itaque velit iste sed, voluptates autem, quisquam corporis animi. Culpa ad reiciendis officia aliquid alias?</div>
+            <div class="faq">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id asperiores ullam natus praesentium sunt illo omnis quo aperiam. Libero, exercitationem deleniti tempora aperiam laudantium atque alias? Quod voluptatem dolores placeat.</div>
+            <div class="contacts">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia accusantium assumenda magnam illum amet ipsam culpa ex quas praesentium recusandae eveniet vitae earum, quasi quisquam atque incidunt molestias pariatur officiis.</div>
+        </main>
+        <footer class="footer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus facere voluptates consequatur ea laborum! Quae similique excepturi, sapiente maxime repellendus atque odit consequatur laborum soluta natus impedit reiciendis harum unde.</footer>
+    </div>
 
 </body>
 </html>
