--- a/index.html
+++ b/index.html
@@ -14,36 +14,57 @@
 </head>
 <body>
     <div class="wrapper">
+
         <header class="header">
-            <div class="header__logo">
-                <img src="assets/img/logos/logo80.png" alt="Zooov company logo">
-            </div>
-            <nav class="header__menu">
-                <ul class="header__list">
-                    <li><a href="" class="header__link">BARF</a></li>
-                    <li><a href="" class="header__link">Рационы</a></li>
-                    <li><a href="" class="header__link">ZOOOV</a></li>
-                    <li><a href="" class="header__link">О нас</a></li>
-                    <li><a href="" class="header__link">Доставка</a></li>
-                    <li><a href="" class="header__link">FAQ</a></li>
-                    <li><a href="" class="header__link">Контакты</a></li>
-                </ul>
-            </nav>
-            <div class="header__burger">
-                <span></span>
+            <div class="header__container _container">
+                <a href class="header__logo">
+                    <img src="assets/img/logos/logo80.png" alt="Zooov company logo">
+                </a>
+                <nav class="header__menu menu">
+                    <div class="header__burger">
+                        <span></span>
+                    </div>
+                    <ul class="menu__list">
+                        <li><a href="" class="menu__link">BARF</a></li>
+                        <li><a href="" class="menu__link">Рационы</a></li>
+                        <li><a href="" class="menu__link">ZOOOV</a></li>
+                        <li><a href="" class="menu__link">О нас</a></li>
+                        <li><a href="" class="menu__link">Доставка</a></li>
+                        <li><a href="" class="menu__link">FAQ</a></li>
+                        <li><a href="" class="menu__link">Контакты</a></li>
+                    </ul>
+                </nav>
             </div>
         </header>
+
         <main class="main">
-            <div class="intro"><p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, id alias. Maxime necessitatibus possimus facilis, exercitationem, delectus dolores odio doloribus harum magni blanditiis, tempora ut deserunt animi. In, tempora officiis.</div>
-            <div class="barf">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus eveniet rerum itaque quos, fugit quaerat nihil optio animi dignissimos officia quidem temporibus esse a, voluptas dolorem veniam reprehenderit at molestiae!</div>
-            <div class="diet-compo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis unde quaerat magnam dolore quos illo earum ipsum officia repellat cupiditate iste perferendis expedita veniam illum consequuntur voluptates, corporis vitae quis.</div>
-            <div class="diets">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, consectetur cum. Ullam enim incidunt tenetur voluptas nulla repudiandae, quas at velit ipsa hic labore vero impedit. Illum reiciendis modi necessitatibus?</div>
-            <div class="diet-calc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem odio atque explicabo quae id expedita qui, repudiandae quos iure nemo aliquam minus facilis inventore reiciendis fugiat, iusto quis soluta iste.</div>
-            <div class="why-zooov">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, mollitia! Suscipit tenetur temporibus facilis mollitia, soluta nam deleniti laborum nostrum deserunt sapiente dolores hic qui odio repellendus perspiciatis dignissimos nulla.</div>
-            <div class="about-zooov">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, officia natus. Et, nisi vitae minus error culpa voluptate sapiente harum quasi numquam quos eligendi esse enim rem ducimus doloribus voluptatem.</div>
-            <div class="delivery">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi esse, non sapiente doloremque aliquid odit itaque velit iste sed, voluptates autem, quisquam corporis animi. Culpa ad reiciendis officia aliquid alias?</div>
-            <div class="faq">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id asperiores ullam natus praesentium sunt illo omnis quo aperiam. Libero, exercitationem deleniti tempora aperiam laudantium atque alias? Quod voluptatem dolores placeat.</div>
-            <div class="contacts">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia accusantium assumenda magnam illum amet ipsam culpa ex quas praesentium recusandae eveniet vitae earum, quasi quisquam atque incidunt molestias pariatur officiis.</div>
+
+            <div class="main__intro intro">
+                <div class="intro__container _container">
+                    <div class="intro__body">
+                        <h1 class="intro__title">Питание, которое полюбит ваш хвостик</h1>
+                        <div class="intro__text">Натуральные рационы питания для собак по системе BARF</div>
+                        <div class="intro__button">
+                            <a href class="button button_red">Выбрать рацион</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="intro__image _ibg">
+                    <img src="assets/img/intro/intro-bg.jpg" alt="cover image: dog">
+                </div>
+            </div>
+
+            <div class="barf">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas recusandae quae enim ut quidem aut, sint voluptatum cum error eius ducimus aliquam hic doloremque ipsa voluptatem? Est adipisci excepturi aut.
+            Officiis rem sunt beatae suscipit impedit aspernatur debitis, iste consequuntur, necessitatibus ipsum sapiente totam? Reiciendis eum, libero neque, quibusdam cupiditate repellat sed alias voluptatem ratione dolor deleniti nam pariatur labore!
+            Quos molestiae eligendi, numquam id harum voluptate et nihil, possimus nobis ut eum dolores porro. Modi non quod mollitia natus veniam est. Est id eaque dicta quod atque eos quia!</div>
+            <div class="diet-compo"></div>
+            <div class="diets"></div>
+            <div class="diet-calc"></div>
+            <div class="why-zooov"></div>
+            <div class="about-zooov"></div>
+            <div class="delivery"></div>
+            <div class="faq"></div>
+            <div class="contacts"></div>
         </main>
         <footer class="footer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus facere voluptates consequatur ea laborum! Quae similique excepturi, sapiente maxime repellendus atque odit consequatur laborum soluta natus impedit reiciendis harum unde.</footer>
     </div>
