--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                 <div class="intro__image _ibg">
                     <img src="assets/img/intro/intro-bg.jpg" alt="cover image: dog">
                 </div>
+                <div class="intro__zooov-stroke">
+                    <img src="assets/img/intro/zooov-stroke.jpg" alt="decorative writing: zooov">
+                </div>
             </div>
 
             <div class="barf">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas recusandae quae enim ut quidem aut, sint voluptatum cum error eius ducimus aliquam hic doloremque ipsa voluptatem? Est adipisci excepturi aut.
