header burger menu

--- a/index.html
+++ b/index.html
@@ -17,23 +17,25 @@
 
         <header class="header">
             <div class="header__container _container">
-                <a href class="header__logo">
-                    <img src="assets/img/logos/logo80.png" alt="Zooov company logo">
-                </a>
-                <nav class="header__menu menu">
+                <div class="header__body">
+                    <a href class="header__logo">
+                        <img src="assets/img/logos/logo80.png" alt="Zooov company logo">
+                    </a>
                     <div class="header__burger">
                         <span></span>
                     </div>
-                    <ul class="menu__list">
-                        <li><a href="" class="menu__link">BARF</a></li>
-                        <li><a href="" class="menu__link">Рационы</a></li>
-                        <li><a href="" class="menu__link">ZOOOV</a></li>
-                        <li><a href="" class="menu__link">О нас</a></li>
-                        <li><a href="" class="menu__link">Доставка</a></li>
-                        <li><a href="" class="menu__link">FAQ</a></li>
-                        <li><a href="" class="menu__link">Контакты</a></li>
-                    </ul>
-                </nav>
+                    <nav class="header__menu menu">
+                        <ul class="menu__list">
+                            <li><a href="" class="menu__link">BARF</a></li>
+                            <li><a href="" class="menu__link">Рационы</a></li>
+                            <li><a href="" class="menu__link">ZOOOV</a></li>
+                            <li><a href="" class="menu__link">О нас</a></li>
+                            <li><a href="" class="menu__link">Доставка</a></li>
+                            <li><a href="" class="menu__link">FAQ</a></li>
+                            <li><a href="" class="menu__link">Контакты</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
         </header>
 
@@ -71,6 +73,7 @@
         </main>
         <footer class="footer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus facere voluptates consequatur ea laborum! Quae similique excepturi, sapiente maxime repellendus atque odit consequatur laborum soluta natus impedit reiciendis harum unde.</footer>
     </div>
-
+<script src="http://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
