intro and header section items positioning

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                             <li><a href="" class="menu__link">FAQ</a></li>
                             <li><a href="" class="menu__link">Контакты</a></li>
                         </ul>
+                        <div class="header__button">
+                            <a href class="button button_red">Выбрать рацион</a>
+                        </div>
                     </nav>
                 </div>
             </div>
