added barf section

--- a/index.html
+++ b/index.html
@@ -61,9 +61,24 @@
                 </div>
             </div>
 
-            <div class="barf">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas recusandae quae enim ut quidem aut, sint voluptatum cum error eius ducimus aliquam hic doloremque ipsa voluptatem? Est adipisci excepturi aut.
-            Officiis rem sunt beatae suscipit impedit aspernatur debitis, iste consequuntur, necessitatibus ipsum sapiente totam? Reiciendis eum, libero neque, quibusdam cupiditate repellat sed alias voluptatem ratione dolor deleniti nam pariatur labore!
-            Quos molestiae eligendi, numquam id harum voluptate et nihil, possimus nobis ut eum dolores porro. Modi non quod mollitia natus veniam est. Est id eaque dicta quod atque eos quia!</div>
+            <div class="barf _container">
+                <div class="barf__content">
+                    <h2 class="barf__subtitle subtitle">Что такое BARF</h2>
+                    <p class="barf__text text">BARF (Biologically Appropriate Raw Food) — система питания собак, основанная на сырых натуральных продуктах. Такой рацион максимально приближен к естественному пищевому поведению хищников, а значит биологически правилен. </p>
+                    <h3 class="barf__minisubtitle minisubtitle">После перехода на питание по системе BARF у собак:</h3>
+                    <ul class="barf__list bulleted-list">
+                        <li>Нормализуется пищеварение</li>
+                        <li>Проходят аллергические реакции</li>
+                        <li>Прекращается образование зубного камня</li>
+                        <li>Появляется больше энергии</li>
+                        <li>Увеличивается продолжительность жизни</li>
+                    </ul>
+                </div>
+                <div class="barf__image">
+                    <img src="assets/img/barf/barf.jpg" alt="dog with its meal">
+                </div>
+            </div>
+
             <div class="diet-compo"></div>
             <div class="diets"></div>
             <div class="diet-calc"></div>
