added diet-compo section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,39 @@
                 </div>
             </div>
 
-            <div class="diet-compo"></div>
+            <div class="diet-compo">
+                <div class="diet-compo__container _container">
+                    <div class="diet-compo__adult-dogs diet-compo__section">
+                        <h3 class="diet-compo__subtitle">Для взрослых</h3>
+                        <ul class="diet-compo__list_left">
+                            <li class="compo__item_meat">Мясо – 70%</li>
+                            <li class="compo__item_bones">Кости – 10%</li>
+                            <li class="compo__item_vegetables">Овощи – 7%</li>
+                            <li class="compo__item_liver">Печень – 5%</li>
+                        </ul>
+                        <ul class="diet-compo__list_right">
+                            <li class="compo__item_by-products">Субпродукты – 5%</li>
+                            <li class="compo__item_grains">Семена/Орехи – 2%</li>
+                            <li class="compo__item_fruits">Фрукты – 1%</li>
+                        </ul>
+                    </div>
+                    <div class="diet-compo__puppets diet-compo__section">
+                        <h3 class="diet-compo__subtitle">Для щенков</h3>
+                        <ul class="diet-compo__list_left">
+                            <li class="compo__item_meat">Мясо – 58%</li>
+                            <li class="compo__item_bones">Кости – 17%</li>
+                            <li class="compo__item_vegetables">Овощи – 7%</li>
+                            <li class="compo__item_liver">Печень – 7%</li>
+                        </ul>
+                        <ul class="diet-compo__list_right">
+                            <li class="compo__item_by-products">Субпродукты – 57</li>
+                            <li class="compo__item_grains">Семена/Орехи – 3%</li>
+                            <li class="compo__item_fruits">Фрукты – 1%</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
             <div class="diets"></div>
             <div class="diet-calc"></div>
             <div class="why-zooov"></div>
