fixed paddings in diet-compo section

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                 </div>
             </div>
 
-            <div class="diet-compo">
-                <div class="diet-compo__container _container">
+            <div class="diet-compo _container">
+                <div class="diet-compo__content">
                     <div class="diet-compo__adult-dogs diet-compo__section">
                         <h3 class="diet-compo__subtitle">Для взрослых</h3>
                         <ul class="diet-compo__list_left">
