added diets section

--- a/index.html
+++ b/index.html
@@ -112,7 +112,53 @@
                 </div>
             </div>
 
-            <div class="diets"></div>
+            <div class="diets _container">
+                <h2 class="diets__subtitle subtitle">Рационы ZOOOV</h2>
+                <div class="diets__text text">Система питания взрослой собаки не подойдет для щенка, поэтому мы создали разные
+                    по составу рационы ZOOOV. Вы сможете заказать полноценное питание исходя из возраста, веса и даже вкусовых предпочтений вашего друга. ZOOOV  заботится о каждой собаке.</div>
+                <div class="diets__items">
+                    <div class="diets__item">
+                        <div class="diets__image"><img src="assets/img/diets/adults-1.jpg"></div>
+                        <h3 class="diets_destination">Для взрослых собак </h3>
+                        <div class="diets__compo">Индейка/Говядина</div>
+                        <div class="diets__descrition">Подходит для ежедвеного кормления. Богат животными белками и Омега-3.</div>
+                        <div class="diets_weight">700г / 500г / 300г / 150г / 100г</div>
+                        <div class="diets_button">
+                            <a href="" class="button_white button">Заказать</a>
+                        </div>
+                    </div>
+                    <div class="diets__item">
+                        <div class="diets__image"><img src="assets/img/diets/puppets-2.jpg"></div>
+                        <h3 class="diets_destination">Для щенков </h3>
+                        <div class="diets__compo">Индейка/Говядина</div>
+                        <div class="diets__descrition">Подходит для ежедвеного кормления. Богат животными белками и Омега-3.</div>
+                        <div class="diets_weight">700г / 500г / 300г / 150г / 100г</div>
+                        <div class="diets_button">
+                            <a href="" class="button_white button">Заказать</a>
+                        </div>
+                    </div>
+                    <div class="diets__item">
+                        <div class="diets__image"><img src="assets/img/diets/adults-3.jpg"></div>
+                        <h3 class="diets_destination">Для взрослых собак </h3>
+                        <div class="diets__compo">Баранина/Кролик</div>
+                        <div class="diets__descrition">Подходит для ежедвеного кормления. Богат животными белками и Омега-3.</div>
+                        <div class="diets_weight">700г / 500г / 300г / 150г / 100г</div>
+                        <div class="diets_button">
+                            <a href="" class="button_white button">Заказать</a>
+                        </div>
+                    </div>
+                    <div class="diets__item">
+                        <div class="diets__image"><img src="assets/img/diets/puppets-4.jpg"></div>
+                        <h3 class="diets_destination">Для щенков </h3>
+                        <div class="diets__compo">Баранина/Кролик</div>
+                        <div class="diets__descrition">Подходит для ежедневного кормления. Богат животными белками и Омега-3.</div>
+                        <div class="diets_weight">700г / 500г / 300г / 150г / 100г</div>
+                        <div class="diets_button">
+                            <a href="" class="button_white button">Заказать</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="diet-calc"></div>
             <div class="why-zooov"></div>
             <div class="about-zooov"></div>
