added diet-calc section

--- a/index.html
+++ b/index.html
@@ -159,7 +159,16 @@
                     </div>
                 </div>
             </div>
-            <div class="diet-calc"></div>
+            <div class="diet-calc _container">
+                <div class="diet-calc__content">
+                    <div class="diet-compo__text">
+                        <p>Рассчитаем в каком количестве нужно кормить вашего хвостика рационами Zooov</p>
+                    </div>
+                    <div class="diet-compo__button">
+                        <a href class="button button_red">Расчитать</a>
+                    </div>
+                </div>
+            </div>
             <div class="why-zooov"></div>
             <div class="about-zooov"></div>
             <div class="delivery"></div>
