updated action plan

--- a/index.html
+++ b/index.html
@@ -169,9 +169,62 @@
                     </div>
                 </div>
             </div>
-            <div class="why-zooov"></div>
-            <div class="about-zooov"></div>
-            <div class="delivery"></div>
+            <div class="why-zooov _container">
+                <h2 class="why-zooov__subtitle subtitle">Почему ZOOOV</h2>
+                <div class="why-zooov__items">
+                    <div class="why-zooov__item">
+                        <div class="why-zooov__image"><img src="assets/img/why-zooov/natural.png"></div>
+                        <h3 class="why-zooov__minisubtitle minisubtitle">Натурально</h3>
+                        <div class="why-zooov__descrition text">Все продукты тщательно отбираем у проверенных поставщиков.</div>
+                    </div>
+                    <div class="why-zooov__item">
+                        <div class="why-zooov__image"><img src="assets/img/why-zooov/healthy.png"></div>
+                        <h3 class="why-zooov__minisubtitle minisubtitle">Здорово</h3>
+                        <div class="why-zooov__descrition text">Система питания, которая продлевает жизнь вашего хвостика.</div>
+                    </div>
+                    <div class="why-zooov__item">
+                        <div class="why-zooov__image"><img src="assets/img/why-zooov/fast.png"></div>
+                        <h3 class="why-zooov__minisubtitle minisubtitle">Быстро</h3>
+                        <div class="why-zooov__descrition text">Сделайте заказ на сайте и с вами свяжется  наш менеджер для уточнения деталей.</div>
+                    </div>
+                    <div class="why-zooov__item">
+                        <div class="why-zooov__image"><img src="assets/img/why-zooov/comfortable.png"></div>
+                        <h3 class="why-zooov__minisubtitle minisubtitle">Удобно</h3>
+                        <div class="why-zooov__descrition text">Достаточно разморозить порцию ZOOOV,  удалить отрывную крышку с лотка и обед для вашего питомца готов.</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="about-zooov">SALUT!</div>
+
+            <div class="delivery _container">
+                <h2 class="delivery__subtitle subtitle">Как получить ZOOOV?</h2>
+                <div class="delivery__items">
+                    <div class="delivery__item">
+                        <div class="delivery__image"><img src="assets/img/delivery/package.png"></div>
+                        <h3 class="delivery__minisubtitle minisubtitle">Закажите рацион</h3>
+                        <div class="delivery__descrition text">Выберите рацион для своей собаки. Если не знаете сколько
+                            и какой – мы подскажем.</div>
+                    </div>
+                    <div class="delivery__item">
+                        <div class="delivery__image"><img src="assets/img/delivery/phonecall.png"></div>
+                        <h3 class="delivery__minisubtitle minisubtitle">Подтвердите заказ</h3>
+                        <div class="delivery__descrition text">Мы свяжемся с вами для подтверждения заказа
+                            и уточнения деталей.</div>
+                    </div>
+                    <div class="delivery__item">
+                        <div class="delivery__image"><img src="assets/img/delivery/clock.png"></div>
+                        <h3 class="delivery__minisubtitle minisubtitle">Ожидайте доставки</h3>
+                        <div class="delivery__descrition text">Привозим заказ на следующий день. По СПб – 350₽, при заказе от 3 500₽ – бесплатно. Лен. область – по договоренности.</div>
+                    </div>
+                    <div class="delivery__item">
+                        <div class="delivery__image"><img src="assets/img/delivery/heart.png"></div>
+                        <h3 class="delivery__minisubtitle minisubtitle">Радуйте своего питомца</h3>
+                        <div class="delivery__descrition text">Просто разморозьте рацион: при комнатной температуре – 3 часа, в холодильнике – 12-15 часов.</div>
+                    </div>
+                </div>
+            </div>
+
             <div class="faq"></div>
             <div class="contacts"></div>
         </main>
