added about-zooov section

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="diet-calc _container">
                 <div class="diet-calc__content">
                     <div class="diet-compo__text">
@@ -169,6 +170,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="why-zooov _container">
                 <h2 class="why-zooov__subtitle subtitle">Почему ZOOOV</h2>
                 <div class="why-zooov__items">
@@ -195,7 +197,34 @@
                 </div>
             </div>
 
-            <div class="about-zooov">SALUT!</div>
+            <div class="about-zooov">
+                <div class="about-zooov__content _container">
+                    <div class="about-zooov__gallery">
+                        <div class="gallery__big">
+                            <img src="assets/img/about-us/about-us-big.jpg" alt="bigger dog with meal">
+                        </div>
+                        <div class="gallery__small">
+                            <img src="assets/img/about-us/about-us-small.jpg" alt="smaller dog with meal">
+                        </div>
+                        <div class="gallery__dog">
+                            <img src="assets/img/about-us/about-us-dog.png" alt="dog image">
+                        </div>
+                        <div class="gallery__heart">
+                            <img src="assets/img/about-us/about-us-heart.png" alt="heart image">
+                        </div>
+                    </div>
+                    <div class="about-zooov__description">
+                        <h2 class="about-zooov__subtitle subtitle">С заботой и любовью от Zooov</h2>
+                        <div class="about-zooov__text text">
+                            <p>Мы сами владельцы собак и знаем, как важно правильное и качественное питание для долгой и счастливой жизни вашего питомца. Для нас ZOOOV это не просто бизнес, это наш вклад в повышение качества жизни всех собак.</p>
+                            <p>Мы знаем, как правильно подобрать и переработать мясо, субпродукты, овощи и фрукты, чтобы питание вашего питомца было максимально сбалансированным и полезным.</p>
+                            <p>Обычного сырого мяса из магазина будет недостаточно для полноценного питания собаки. ZOOOV — экономия времени, вам не придется искать необходимые составляющие для рациона.</p>
+                            <p>Мы сами отбираем мясо, кости, легкие, печень и другие говяжьи, кроличьи и птичьи субпродукты у проверенных поставщиков. Закупаем органические овощи и используем разнообразные масла, такие как конопляное и льняное.</p>
+                            <p>ZOOOV — это удобно, мы доставляем готовый рацион на две недели уже смешанным, расфасованным и упакованным в порционные лотки,готовыми к заморозке. За два часа до кормления достаточно переместить контейнер из морозилки в холодильник для ПРАВИЛЬНОЙ разморозки.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="delivery _container">
                 <h2 class="delivery__subtitle subtitle">Как получить ZOOOV?</h2>
@@ -225,7 +254,9 @@
                 </div>
             </div>
 
-            <div class="faq"></div>
+            <div class="faq _container">
+
+            </div>
             <div class="contacts"></div>
         </main>
         <footer class="footer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus facere voluptates consequatur ea laborum! Quae similique excepturi, sapiente maxime repellendus atque odit consequatur laborum soluta natus impedit reiciendis harum unde.</footer>
