--- a/index.html
+++ b/index.html
@@ -255,11 +255,99 @@
             </div>
 
             <div class="faq _container">
-
+                <h3 class="faq_subtitle subtitle">Частые вопросы</h3>
+                <div class="faq__spoiler">
+                    <div class="spoiler__one">
+                        <h3 class="spoiler__minisubtitle minisubtitle">Не опасны ли бактерии, которые находятся в сыром мясе?</h3>
+                        <p class="spoiler__text text">У здоровых собак отличная иммунная система, готовая ко всем видам бактерий. Рацион BARF как раз укрепит иммунитет вашей собаки и защитит ее от влияния бактерий, которые находятся на улице или даже в вашем доме.</p>
+                    </div>
+                    <div class="spoiler__two">
+                        <h3 class="spoiler__minisubtitle minisubtitle">Надо ли давать дополнительно витамины к рациону BARF?</h3>
+                        <p class="spoiler__text text">Наш рацион уже включает в состав, кроме мяса и субпродуктов — свежие овощи, нерафинированные масла и даже фрукты, которые обеспечат вашего питомца всем необходимым комплексом витаминов и минералов.</p>
+                    </div>
+                    <div class="spoiler__three">
+                        <h3 class="spoiler__minisubtitle minisubtitle">А если моя собака уже давно питается промышленным кормом и у нее нет проблем со здоровьем?</h3>
+                        <p class="spoiler__text text">Часто проблемы со здоровьем могут иметь накопительный эффект и если сейчас ваш четвероногий друг здоров, это не значит, что через пару лет не проявятся заболевания связанные именно с долгим употреблением сухого корма. Позаботиться о здоровье и долголетии вашего питомца вы можете уже сейчас, переведя его на здоровый рацион BARF. </p>
+                    </div>
+                    <div class="spoiler__four">
+                        <h3 class="spoiler__minisubtitle minisubtitle">Можно ли смешивать натуральный корм и корм промышленного производства?</h3>
+                        <p class="spoiler__text text"> Пользы от смешанного принципа питания для вашего питомца не будет никакой. Сухой корм, в той или иной степени, будет провоцировать возникновение проблем с зубами и ЖКТ. Кроме того, смешанный рацион — гарантированный дисбаланс ингредиентов.</p>
+                    </div>
+                    <div class="spoiler__five">
+                        <h3 class="spoiler__minisubtitle minisubtitle">Могу ли я сам составить для своей собаки рацион по системе BARF?</h3>
+                        <p class="spoiler__text text">В составе рациона должны присутствовать не только мясо и кости, но и субпродукты, овощи, масла и фрукты. Очень важно соблюсти правильные пропорции всех ингредиентов. К сожалению, сделать это в домашних условиях практически невозможно. </p>
+                    </div>
+                    <div class="spoiler__six">
+                        <h3 class="spoiler__minisubtitle minisubtitle">Присутствует ли в ZOOOV рационах рыба?</h3>
+                        <p class="spoiler__text text">При составлении рационов мы не используем продукты подвергавшиеся заморозке. К сожалению в Санкт-Петербурге не просто найти качественную свежую рыбу. В качестве альтернативы мы используем нерафинированное конопляное масло. Такое масло полностью удовлетворяет потребность организма в жирных кислотах. В масле из конопли содержатся витамины А, В1, В2, В3, В6, С, D и Е, цинк, фтор, железо, фосфор, сера, калий, магний и многие другие необходимые микроэлементы.</p>
+                    </div>
+                    <div class="spoiler__seven">
+                        <h3 class="spoiler__minisubtitle minisubtitle">Как перевести питомца на натуральное питание?</h3>
+                        <p class="spoiler__text text">Существует два варианта перехода: быстрый и медленный. Выбор зависит от возраста собаки, ее здоровья и пищевых привычек. Собака привыкшая к еде с вашего стола, скорее всего, готова к быстрому переходу на сырое питание. Питомцы, которые длительное время питались сухим кормом, могут быть не готовы резко менять рацион.
+                            В любом случае, перед первым кормлением рекомендуется сделать голодную паузу на 24 часа.</p>
+                    </div>
+                    <div class="spoiler__eight">
+                        <h3 class="spoiler__minisubtitle minisubtitle">Как готовить рацион ZOOOV?</h3>
+                        <p class="spoiler__text text">Мы доставляем порции необходимого объема замороженными, в специальных термосумках. Вы помещаете рацион в свой домашний морозильник. Перед кормлением порцию необходимо поместить для разморозки на ночь в холодильник или размораживать при комнатной температуре 3-4 часа. (НЕ ИСПОЛЬЗОВАТЬ МИКРОВОЛНОВКу!) Больше никакой обработке подвергать пищу не надо. Непосредственно перед кормление снять отрывную крышку. Благодаря качественной и продуманной упаковке во время разморозки ни в холодильнике, ни в кухне не появится посторонних запахов.
+                            Повторно замораживать порции не рекомендуется!</p>
+                    </div>
+                    <div class="spoiler__nine">
+                        <h3 class="spoiler__minisubtitle minisubtitle">При переходе на рацион ZOOOV у собаки начались проблемы с ЖКТ.
+                            Это нормально?</h3>
+                        <p class="spoiler__text text">При переводе вашего питомца на натуральный корм могут появиться симптомы детоксикации, такие как расстройство желудка, рвота, аллергическая реакция. Это нормальная реакция при перестройке пищеварительной системы. Проблемы могут продолжаться до 2-3 недель, но при строгом соблюдении выбранного рациона, состояние собаки не просто нормализуется, а значительно улучшится. При этом, стул вашего питомца также претерпит изменения — станет реже и уменьшится его количество. </p>
+                    </div>
+                </div>
             </div>
-            <div class="contacts"></div>
+            <div class="contacts">
+                <div class="contacts__how-to">
+                    <h2 class="contacts__subtitle subtitle">Контакты</h2>
+                    <p class="contacts__text text">Вы всегда можете с нами связаться по телефону или в мессенджерах</p>
+                    <div class="contacts__phone">+7 (900)000-00-00</div>
+                    <div class="contacts__whats-app">
+                        <a href class="button button_pink">Написать в WhatsApp</a>
+                    </div>
+                    <div class="contacts__telegram">
+                        <a href class="button button_pink">Написать в Telegram</a>
+                    </div>
+                    <p class="contacts__text_two text">Подписывайтесь на наш Instagram и следите за новостями</p>
+                </div>
+                <div class="contacts__form">
+                    <h3 class="contacts__minisubtitle minisubtitle">Остались вопросы?</h3>
+                    <div class="contacts__form__text text">Напишите нам и мы обязательно подробно на них ответим.</div>
+                    <form class="contacts__form__inputs" action="#" method="get">
+                        <div class="inputs__name-tel">
+                            <div class="inputs__name">
+                                <input type="text" name="username" value="" placeholder="Имя"
+                                tabindex="1" required/>
+                            </div>
+                            <div>
+                                <input type="text" name="usermail" value="" placeholder="Email *"
+                                tabindex="2" required/>
+                            </div>
+                        </div>
+                        <div class="inputs__question">
+                            <textarea name="question" id="" cols="30" rows="8"
+                                placeholder="Ваш вопрос..." tabindex="3"> </textarea>
+                        </div>
+                        <div class="contact-form__privacy-button">
+                            <div class="contact-form__privacy">
+                                <input  type="checkbox" name="privacy" value="OK" tabindex="4" required/>  Даю согласие на обработку персональных данных
+                            </div>
+                            <button class="contact-form__button button button_white" type="submit" tabindex="5">
+                                <a href="#popup">Отправить</a>
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </main>
-        <footer class="footer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus facere voluptates consequatur ea laborum! Quae similique excepturi, sapiente maxime repellendus atque odit consequatur laborum soluta natus impedit reiciendis harum unde.</footer>
+        <footer class="footer">
+            <div class="footer__content">
+                <div class="text-footer">ИП Коваленко Евгений Геннадьевич ИНН784215731801, адрес производства г. Санкт-Петербург 17-я линия В.О 66, пом. 2/07</div>
+                <div class="text-footer">Публичная оферта</div>
+                <div class="text-footer">Политика конфеденциальности</div>
+            </div>
+        </footer>
     </div>
 <script src="http://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 <script src="assets/js/script.js"></script>
