--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </header>
 
         <main class="main">
-            <div class="main__intro intro">
+            <div class="main__intro">
                 <div class="intro__container _container">
                     <div class="intro__body">
                         <h1 class="intro__title">Питание, которое полюбит ваш хвостик</h1>
