--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </header>
 
         <main class="main">
-            <div class="main__intro">
+            <div class="intro">
                 <div class="intro__container _container">
                     <div class="intro__body">
                         <h1 class="intro__title">Питание, которое полюбит ваш хвостик</h1>
@@ -66,7 +66,7 @@
                     <h2 class="barf__subtitle subtitle">Что такое BARF</h2>
                     <p class="barf__text text">BARF (Biologically Appropriate Raw Food) — система питания собак, основанная на сырых натуральных продуктах. Такой рацион максимально приближен к естественному пищевому поведению хищников, а значит биологически правилен. </p>
                     <h3 class="barf__minisubtitle minisubtitle">После перехода на питание по системе BARF у собак:</h3>
-                    <ul class="barf__list bulleted-list">
+                    <ul class="barf__list bulleted-list text">
                         <li>Нормализуется пищеварение</li>
                         <li>Проходят аллергические реакции</li>
                         <li>Прекращается образование зубного камня</li>
@@ -82,7 +82,7 @@
             <div class="diet-compo _container">
                 <div class="diet-compo__content">
                     <div class="diet-compo__adult-dogs diet-compo__section">
-                        <h3 class="diet-compo__subtitle">Для взрослых</h3>
+                        <h3 class="diet-compo__minisubtitle minisubtitle">Для взрослых</h3>
                         <ul class="diet-compo__list_left">
                             <li class="compo__item_meat">Мясо – 70%</li>
                             <li class="compo__item_bones">Кости – 10%</li>
@@ -96,7 +96,7 @@
                         </ul>
                     </div>
                     <div class="diet-compo__puppets diet-compo__section">
-                        <h3 class="diet-compo__subtitle">Для щенков</h3>
+                        <h3 class="diet-compo__minisubtitle minisubtitle">Для щенков</h3>
                         <ul class="diet-compo__list_left">
                             <li class="compo__item_meat">Мясо – 58%</li>
                             <li class="compo__item_bones">Кости – 17%</li>
@@ -114,14 +114,14 @@
 
             <div class="diets _container">
                 <h2 class="diets__subtitle subtitle">Рационы ZOOOV</h2>
-                <div class="diets__text text">Система питания взрослой собаки не подойдет для щенка, поэтому мы создали разные
+                <div class="diets__text text _black">Система питания взрослой собаки не подойдет для щенка, поэтому мы создали разные
                     по составу рационы ZOOOV. Вы сможете заказать полноценное питание исходя из возраста, веса и даже вкусовых предпочтений вашего друга. ZOOOV  заботится о каждой собаке.</div>
                 <div class="diets__items">
                     <div class="diets__item">
                         <div class="diets__image"><img src="assets/img/diets/adults-1.jpg"></div>
-                        <h3 class="diets_destination">Для взрослых собак </h3>
+                        <h3 class="diets_destination minisubtitle">Для взрослых собак </h3>
                         <div class="diets__compo">Индейка/Говядина</div>
-                        <div class="diets__descrition">Подходит для ежедвеного кормления. Богат животными белками и Омега-3.</div>
+                        <div class="diets__descrition text">Подходит для ежедвеного кормления. Богат животными белками и Омега-3.</div>
                         <div class="diets_weight">700г / 500г / 300г / 150г / 100г</div>
                         <div class="diets_button">
                             <a href="" class="button_white button">Заказать</a>
@@ -129,9 +129,9 @@
                     </div>
                     <div class="diets__item">
                         <div class="diets__image"><img src="assets/img/diets/puppets-2.jpg"></div>
-                        <h3 class="diets_destination">Для щенков </h3>
+                        <h3 class="diets_destination minisubtitle">Для щенков </h3>
                         <div class="diets__compo">Индейка/Говядина</div>
-                        <div class="diets__descrition">Подходит для ежедвеного кормления. Богат животными белками и Омега-3.</div>
+                        <div class="diets__descrition text">Подходит для ежедвеного кормления. Богат животными белками и Омега-3.</div>
                         <div class="diets_weight">700г / 500г / 300г / 150г / 100г</div>
                         <div class="diets_button">
                             <a href="" class="button_white button">Заказать</a>
@@ -139,9 +139,9 @@
                     </div>
                     <div class="diets__item">
                         <div class="diets__image"><img src="assets/img/diets/adults-3.jpg"></div>
-                        <h3 class="diets_destination">Для взрослых собак </h3>
+                        <h3 class="diets_destination minisubtitle">Для взрослых собак </h3>
                         <div class="diets__compo">Баранина/Кролик</div>
-                        <div class="diets__descrition">Подходит для ежедвеного кормления. Богат животными белками и Омега-3.</div>
+                        <div class="diets__descrition text">Подходит для ежедвеного кормления. Богат животными белками и Омега-3.</div>
                         <div class="diets_weight">700г / 500г / 300г / 150г / 100г</div>
                         <div class="diets_button">
                             <a href="" class="button_white button">Заказать</a>
@@ -149,9 +149,9 @@
                     </div>
                     <div class="diets__item">
                         <div class="diets__image"><img src="assets/img/diets/puppets-4.jpg"></div>
-                        <h3 class="diets_destination">Для щенков </h3>
+                        <h3 class="diets_destination minisubtitle">Для щенков </h3>
                         <div class="diets__compo">Баранина/Кролик</div>
-                        <div class="diets__descrition">Подходит для ежедневного кормления. Богат животными белками и Омега-3.</div>
+                        <div class="diets__descrition text">Подходит для ежедневного кормления. Богат животными белками и Омега-3.</div>
                         <div class="diets_weight">700г / 500г / 300г / 150г / 100г</div>
                         <div class="diets_button">
                             <a href="" class="button_white button">Заказать</a>
@@ -177,22 +177,22 @@
                     <div class="why-zooov__item">
                         <div class="why-zooov__image"><img src="assets/img/why-zooov/natural.png"></div>
                         <h3 class="why-zooov__minisubtitle minisubtitle">Натурально</h3>
-                        <div class="why-zooov__descrition text">Все продукты тщательно отбираем у проверенных поставщиков.</div>
+                        <div class="why-zooov__descrition text _black">Все продукты тщательно отбираем у проверенных поставщиков.</div>
                     </div>
                     <div class="why-zooov__item">
                         <div class="why-zooov__image"><img src="assets/img/why-zooov/healthy.png"></div>
                         <h3 class="why-zooov__minisubtitle minisubtitle">Здорово</h3>
-                        <div class="why-zooov__descrition text">Система питания, которая продлевает жизнь вашего хвостика.</div>
+                        <div class="why-zooov__descrition text _black">Система питания, которая продлевает жизнь вашего хвостика.</div>
                     </div>
                     <div class="why-zooov__item">
                         <div class="why-zooov__image"><img src="assets/img/why-zooov/fast.png"></div>
                         <h3 class="why-zooov__minisubtitle minisubtitle">Быстро</h3>
-                        <div class="why-zooov__descrition text">Сделайте заказ на сайте и с вами свяжется  наш менеджер для уточнения деталей.</div>
+                        <div class="why-zooov__descrition text _black">Сделайте заказ на сайте и с вами свяжется  наш менеджер для уточнения деталей.</div>
                     </div>
                     <div class="why-zooov__item">
                         <div class="why-zooov__image"><img src="assets/img/why-zooov/comfortable.png"></div>
                         <h3 class="why-zooov__minisubtitle minisubtitle">Удобно</h3>
-                        <div class="why-zooov__descrition text">Достаточно разморозить порцию ZOOOV,  удалить отрывную крышку с лотка и обед для вашего питомца готов.</div>
+                        <div class="why-zooov__descrition text _black">Достаточно разморозить порцию ZOOOV,  удалить отрывную крышку с лотка и обед для вашего питомца готов.</div>
                     </div>
                 </div>
             </div>
@@ -232,30 +232,30 @@
                     <div class="delivery__item">
                         <div class="delivery__image"><img src="assets/img/delivery/package.png"></div>
                         <h3 class="delivery__minisubtitle minisubtitle">Закажите рацион</h3>
-                        <div class="delivery__descrition text">Выберите рацион для своей собаки. Если не знаете сколько
+                        <div class="delivery__descrition text _black">Выберите рацион для своей собаки. Если не знаете сколько
                             и какой – мы подскажем.</div>
                     </div>
                     <div class="delivery__item">
                         <div class="delivery__image"><img src="assets/img/delivery/phonecall.png"></div>
                         <h3 class="delivery__minisubtitle minisubtitle">Подтвердите заказ</h3>
-                        <div class="delivery__descrition text">Мы свяжемся с вами для подтверждения заказа
+                        <div class="delivery__descrition text _black">Мы свяжемся с вами для подтверждения заказа
                             и уточнения деталей.</div>
                     </div>
                     <div class="delivery__item">
                         <div class="delivery__image"><img src="assets/img/delivery/clock.png"></div>
                         <h3 class="delivery__minisubtitle minisubtitle">Ожидайте доставки</h3>
-                        <div class="delivery__descrition text">Привозим заказ на следующий день. По СПб – 350₽, при заказе от 3 500₽ – бесплатно. Лен. область – по договоренности.</div>
+                        <div class="delivery__descrition text _black">Привозим заказ на следующий день. По СПб – 350₽, при заказе от 3 500₽ – бесплатно. Лен. область – по договоренности.</div>
                     </div>
                     <div class="delivery__item">
-                        <div class="delivery__image"><img src="assets/img/delivery/heart.png"></div>
+                        <div class="delivery__image image__heart"><img src="assets/img/delivery/heart.png"></div>
                         <h3 class="delivery__minisubtitle minisubtitle">Радуйте своего питомца</h3>
-                        <div class="delivery__descrition text">Просто разморозьте рацион: при комнатной температуре – 3 часа, в холодильнике – 12-15 часов.</div>
+                        <div class="delivery__descrition text _black">Просто разморозьте рацион: при комнатной температуре – 3 часа, в холодильнике – 12-15 часов.</div>
                     </div>
                 </div>
             </div>
 
             <div class="faq _container">
-                <h3 class="faq_subtitle subtitle">Частые вопросы</h3>
+                <h2 class="faq_subtitle subtitle">Частые вопросы</h2>
                 <div class="faq__spoiler">
                     <div class="spoiler__one">
                         <h3 class="spoiler__minisubtitle minisubtitle">Не опасны ли бактерии, которые находятся в сыром мясе?</h3>
@@ -298,25 +298,26 @@
                     </div>
                 </div>
             </div>
+
             <div class="contacts">
                 <div class="contacts__how-to">
-                    <h2 class="contacts__subtitle subtitle">Контакты</h2>
-                    <p class="contacts__text text">Вы всегда можете с нами связаться по телефону или в мессенджерах</p>
+                    <h2 class="contacts__subtitle subtitle _white">Контакты</h2>
+                    <p class="contacts__text text _white">Вы всегда можете с нами связаться по телефону или в мессенджерах</p>
                     <div class="contacts__phone">+7 (900)000-00-00</div>
-                    <div class="contacts__whats-app">
+                    <div>
                         <a href class="button button_pink">Написать в WhatsApp</a>
                     </div>
-                    <div class="contacts__telegram">
+                    <div>
                         <a href class="button button_pink">Написать в Telegram</a>
                     </div>
-                    <p class="contacts__text_two text">Подписывайтесь на наш Instagram и следите за новостями</p>
+                    <p class="contacts__insta text _white">Подписывайтесь на наш Instagram и следите за новостями</p>
                 </div>
                 <div class="contacts__form">
-                    <h3 class="contacts__minisubtitle minisubtitle">Остались вопросы?</h3>
-                    <div class="contacts__form__text text">Напишите нам и мы обязательно подробно на них ответим.</div>
+                    <h3 class="contacts__minisubtitle minisubtitle _white">Остались вопросы?</h3>
+                    <div class="text _white">Напишите нам и мы обязательно подробно на них ответим.</div>
                     <form class="contacts__form__inputs" action="#" method="get">
                         <div class="inputs__name-tel">
-                            <div class="inputs__name">
+                            <div>
                                 <input type="text" name="username" value="" placeholder="Имя"
                                 tabindex="1" required/>
                             </div>
@@ -330,10 +331,10 @@
                                 placeholder="Ваш вопрос..." tabindex="3"> </textarea>
                         </div>
                         <div class="contact-form__privacy-button">
-                            <div class="contact-form__privacy">
+                            <div class="contact-form__privacy _white">
                                 <input  type="checkbox" name="privacy" value="OK" tabindex="4" required/>  Даю согласие на обработку персональных данных
                             </div>
-                            <button class="contact-form__button button button_white" type="submit" tabindex="5">
+                            <button class="button button_peach" type="submit" tabindex="5">
                                 <a href="#popup">Отправить</a>
                             </button>
                         </div>
@@ -345,7 +346,7 @@
             <div class="footer__content">
                 <div class="text-footer">ИП Коваленко Евгений Геннадьевич ИНН784215731801, адрес производства г. Санкт-Петербург 17-я линия В.О 66, пом. 2/07</div>
                 <div class="text-footer">Публичная оферта</div>
-                <div class="text-footer">Политика конфеденциальности</div>
+                <div class="text-footer"><a href="#">Политика конфеденциальности</a></div>
             </div>
         </footer>
     </div>
